# mkdocs-likec4

./: .dockerignore  .gitignore  .yeet.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  index.html  local-preview  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: build.yml  release.yml
assets/mkdocs_likec4/: likec4_views_deployment.js  likec4_views_tutorial.js
deployment/: index.html  likec4.config.json
docs/: index.md  project-usage.md  usage.md
docs/deployment/: index.md
docs/tutorial/: index.md  tutorial.c4
mkdocs_likec4/: generator.py  parser.py  plugin.py
project-usage/: index.html
search/: search_index.json
stylesheets/: mkdocs-doubleslash-theme.css
tests/: test_generator.py  test_parser.py  test_plugin.py
tutorial/: index.html  likec4.config.json
usage/: index.html
