[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-likec4"
description = "LikeC4 for MkDocs"
version = "1.1.1" # x-yeet-version
authors = [{ name = "Jonas Häusler", email = "jonas.haeusler@doubleslash.de" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mkdocs>=1.6",
  "pyjson5>=2.0",
]

[tool.setuptools.packages.find]
include = ["mkdocs_likec4*"]

[project.entry-points."mkdocs.plugins"]
"likec4" = "mkdocs_likec4.plugin:LikeC4Plugin"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
test = [
    "pytest>=8.0",
]
